<resources>
    <string name="app_name">Arrive</string>
    <string name="correo">Correo Electrónico: </string>
    <string name="contrasena">Contraseña:</string>
    <string name="iniciar">Iniciar</string>
    <string name="registrese">Regístrese</string>
    <string name="repcontrasena">Repetir Contraseña:</string>
    <string name="registrar">Registrar</string>
    <string name="mPerfil">Mi perfil</string>
    <string name="mCerrar">Cerrar sesión</string>
    <string name="mPrincipal">Principal</string>

    <string name="facebook_app_id">830192913820602</string>
    <string name="fb_login_protocol_scheme">fb830192913820602</string>
    <string name="Nombre">Nombre:</string>
    <string name="title_activity_base">Arrive</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alien">ALIEN</string>
    <string name="plane">Plane</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="agenda">Agenda tu viaje:</string>
    <string name="fecha">Fecha:</string>
    <string name="dma">DD/MM/YY</string>

</resources>
